# server/controllers/recipes/get.js
@@ -2,9 +2,10 @@ import {getSvc} from '../../lib/recipes/index.js';
 
 export default async function get(request, response, next) {
   try {
-    const {memberId} = request.query
+    const {memberId, keyword} = request.query
+    console.log('keyword = ' + keyword)
 
-    const result = await getSvc({memberId});
+    const result = await getSvc({memberId, keyword});
 
     response.json(result);
   } catch (error) {
