# server/lib/recipes/get.js
@@ -1,7 +1,15 @@
-import {Recipe} from '../../database-initi.js';
+import { Recipe } from '../../database-initi.js';
+import {Op} from 'sequelize';
 
-export default async function get({memberId}) {
+export default async function get({ memberId, keyword }) {
+  const where = {};
+  if (memberId) {
+    where['memberId'] = memberId;
+  } else if (keyword) {
+    where['title'] = { [Op.iLike]: `%${keyword}%` };
+  }
+
   return Recipe.findAndCountAll({
-    where: {memberId}
+    where
   })
 }
